<resources>
    <string name="app_name">Unio</string>

    <!-- Chat menu -->
    <string name="option_clear">Clear all messages</string>
    <string name="option_settings">Settings</string>

    <!-- Internet service -->
    <string name="no_internet_connection">
        Your device does not have Internet connection.
        You need to access the Internet in order to run this service.
    </string>

    <!-- Email service strings -->
    <string name="mail_welcome">
        <![CDATA[
        <b>Send an email with this format:</b><br />
        <i>
            valid@mail.com : subject<br />
            The email that you wan to send
        </i>
        <br/><br/>
        You are currently using <b>%1$s</b>
        ]]>
    </string>
    <string name="no_mail_account">In order to use this service, first you need to configure your email account in the settings menu</string>
    <string name="no_subject">(No subject)</string>
    <string name="sent_mail">The email was sent</string>
    <string name="incorrect_mail_format">The email format is incorrect</string>

    <!-- Email service strings -->
    <string name="weather_welcome">If you tell me the name of a city at any time, I will show its weather forecast for today</string>
    <string name="no_letters_weather">That is not a proper city name!</string>
    <string name="weather_info">
               <![CDATA[
        <b>Current weather in %1$s :</b><br />
        <b>· Description:</b> %2$s <br />
        <b>· Temperature:</b> %3$s %8$s<br />
        <b>· Feels like:</b> %4$s %8$s<br />
        <b>· Minimum temperature:</b> %5$s %8$s<br />
        <b>· Maximum temperature:</b> %6$s %8$s<br />
        <b>· Humidity:</b> %7$s <br />
        ]]>
    </string>
    <string name="city_not_exist">Sorry, I did not find the weather for %1$s</string>


    <!-- Translation service strings -->
    <string name="translation_welcome">
        <![CDATA[
        <b>Send a text in <i>%s</i>, it will be translated to <i>%s</i>.</b><br /><br />
        To <b>use other languages</b>, use this format: <br/><br/>
        english : spanish <br />
        <i>Text in english (example) that will be translated to spanish</i>
        ]]>
    </string>
    <string name="translation_list_command">list</string>
    <string name="translation_fail">The translation service failed, please, try again.</string>
    <string name="msg_copied">Message copied</string>
    <string name="clear_all_chats">Clear all chats</string>

    <!-- Notes service strings -->
    <string name="notes_welcome">
        <![CDATA[
        <b>You can keep important links and messages here!</b>
        ]]>
    </string>

    <!-- Calculator service strings -->
    <string name="calculator_welcome">
        <![CDATA[
        <b>This is a text-based calculator</b>
        ]]>
    </string>
    <string name="calculator_fail">The calculator service failed, please try again.</string>
    <string name="copy_message">Copy message</string>
    <string name="delete_message">Delete message</string>

    <!-- SETTINGS -->
    <string name="mail_settings">Mailing</string>
    <string name="translation_settings">Translator</string>
    <string name="calculator_settings">Calculator</string>
    <string name="weather_settings">Weather</string>
    <string name="enter_email">Email</string>
    <string name="enter_passwd">Password</string>
    <string name="default_source_language">Default source language</string>
    <string name="default_translation_language">Default translation language</string>
    <string name="decimal_precision">Decimal precision</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="kelvin">K - Kelvin</string>
    <string name="fahrenheit">°F - Fahrenheit</string>
    <string name="celsius">°C - Celsius</string>
    <string name="setting_saved">The new settings were saved</string>
    <string name="settings">Settings</string>
    <string name="translator_title">Translator</string>
    <string name="translator_description">Translation Service</string>
    <string name="weather_title">Weather</string>
    <string name="weather_description">Meteorology Service</string>
    <string name="mailing_title">Mailing</string>
    <string name="mailing_description">Email Service</string>
    <string name="notes_title">Notes</string>
    <string name="notes_description">Notepad Service</string>
    <string name="calculator_title">Calculator</string>
    <string name="calculator_description">Calculator Service</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="unio">Unio</string>
    <string name="unio_about_description">This app was developed as a project for the \'Dispositivos Móviles\' course of the Computer Science degree at ESEI (Universidad de Vigo).</string>
    <string name="unio_about_year">Academic year 2020/2021</string>
    <string name="unio_about_authors_title">AUTHORS</string>
    <string name="unio_about_iria">Iria Martínez Álvarez</string>
    <string name="unio_about_cesar">César Gabriel Márquez Rodríguez</string>
    <string name="unio_about_adrian">Antonio Adrián González Pedrouzo</string>
    <string name="chat_demo_text">Hello</string>
    <string name="demo_service_name">Service Name</string>
    <string name="demo_service_description">Service description</string>
    <string name="remove_all_messages">Remove all messages?</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="all_messages_deleted">All messages deleted</string>
    <string name="mail_manager_service_error">There is a problem with the mail server or your user data is not correct</string>
    <string name="no_settings_available">No settings available</string>

</resources>