<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.SettingsActivity">

    <Button
        android:id="@+id/mail_settings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:paddingVertical="10dp"
        android:text="@string/mail_settings"
        android:textSize="20sp" />

    <Button
        android:id="@+id/weather_settings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"

        android:paddingVertical="10dp"
        android:text="@string/weather_settings"
        android:textSize="20sp" />

    <Button
        android:id="@+id/translation_settings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:paddingVertical="10dp"
        android:text="@string/translation_settings"
        android:textSize="20sp" />

    <Button
        android:id="@+id/calculator_settings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:paddingVertical="10dp"
        android:text="@string/calculator_settings"
        android:textSize="20sp" />

</LinearLayout>